Fixes the overflow value

--- a/_styl/components/type.styl
+++ b/_styl/components/type.styl
@@ -70,7 +70,7 @@ pre, code
 
 pre
   white-space: pre-wrap
-  overflow: scroll
+  overflow: auto
 pre code
   @media screen and (max-width: 400px)
     font-size: .85rem
